--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,10 @@
         "minor",
         "patch"
       ]
+    },
+    {
+      "excludePackageNames": ["it.ozimov:embedded-redis"],
+      "enabled": false
     }
   ]
 }
