--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,19 @@
   ],
   "packageRules": [
     {
+      "matchFiles": ["*.toml"],
+      "groupName": "all non-major dependencies",
+      "groupSlug": "all-minor-patch",
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ]
+    },
+    {
+      "matchFiles": ["package.json"],
       "groupName": "all non-major dependencies",
       "groupSlug": "all-minor-patch",
       "matchPackagePatterns": [
