separate language files

--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
     {
       "matchManagers": ["gradle"],
       "groupName": "all non-major spring dependencies",
-      "groupSlug": "all-minor-patch",
+      "groupSlug": "all-minor-gradle-patch",
       "matchUpdateTypes": [
         "minor",
         "patch"
@@ -16,7 +16,7 @@
     {
       "matchManagers": ["npm"],
       "groupName": "all non-major npm dependencies",
-      "groupSlug": "all-minor-patch",
+      "groupSlug": "all-minor-npm-patch",
       "matchUpdateTypes": [
         "minor",
         "patch"
